# Physical-Access-Control-System

./: README.md
.github/: FUNDING.yml
3D Model/Back/: About Back Enclosure.doc
AIStuff/Align/heatmap/: data.py
AIStuff/face_active_liveness/: face_anti_spoofing.py  liveness_detection.py  train_sgdt.py
AIStuff/face_deepfake/: prepare_dataset.py  test.py  test_video.py  train.py
AIStuff/face_detect/: test.py
AIStuff/face_expression/: test.py  train.py
AIStuff/face_eyeblink/: test.py  train.py
AIStuff/face_feature/: eval_agedb30.py  eval_cfp.py  eval_deepglint_merge.py  eval_lfw.py  eval_lfw_blufr.py  eval_megaface.py  run_qat_quant.py  train.py
AIStuff/face_landmark/: facelandmark.py
AIStuff/face_liveness/: eval.py  pl_model.py  test.py  train.py  train_mnet.py
AIStuff/face_pipeline/: questions.py  run_active_liveness.py  run_motion_detection.py  run_passive_liveness.py
Circuit/Face_3Key1V0/: Face_3Key1V0.PcbLib  Face_3Key1V0.PrjPcb  Face_3Key1V0.PrjPcbStructure  Face_3Key1V0.SchDoc
Circuit/Face_Ant1V0/: Face_Ant1V0.PcbDoc  Face_Ant1V0.PcbLib  Face_Ant1V0.PrjPCB  Face_Ant1V0.PrjPCBStructure  Face_Ant1V0.SchDoc
Circuit/Face_HM1V0/: Face_HM1V0.PcbDoc  Face_HM1V0.PcbLib  Face_HM1V0.PrjPCB  Face_HM1V0.PrjPCBStructure  Face_HM1V0.SchDoc
Circuit/Face_InBack1V0/: Face_InBack1V0.PcbLib  Face_InBack1V0.PrjPcb  Face_InBack1V0.PrjPcbStructure  Face_InBack1V0.SchDoc
Circuit/Face_InMain1V0/: 01_Block Diagram.SchDoc  02_Face_InMain1V0.SchDoc  Face_InMain1V0.PrjPCB  Face_InMain1V0.PrjPCBStructure
Firmware/F1C200s/PowerDown/: CMakeLists.txt  main.cpp
(+228 files in other folders)
